--- a/src/main/resources/templates/table_report.vm
+++ b/src/main/resources/templates/table_report.vm
@@ -108,7 +108,7 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:table_re
 									<select  id="userPicker" class="js-default-user-picker single-user-picker" name="userPicker">
 										#if($userPickerObject)
 										<option selected="selected" 
-										 value="$userPickerObject.getKey()"
+										 value="$userPickerObject.getUsername()"
 										   data-field-text="$userPickerObject.getDisplayName()"
 										   style="background-image:url('$avatarURL')" >
 										  $userPickerObject.getDisplayName()
